removed console logs, fixed album alignment, and was awesome

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -72,7 +72,7 @@ a:link, a:visited {
 
 .image-container {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   position: relative;
   display: flex;
 
@@ -133,6 +133,7 @@ a:link, a:visited {
 .album-name {
   color: #fff;
   margin: 5px 0 0 0;
+  word-wrap: break-word;
 }
 
 .album-name:hover {
